--- a/CardioHealth/TasksAndSteps/HeartAgeControllers/Intro/APHHeartAgeIntroStepViewController.storyboard
+++ b/CardioHealth/TasksAndSteps/HeartAgeControllers/Intro/APHHeartAgeIntroStepViewController.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -64,62 +64,98 @@
         <scene sceneID="xXT-L0-GlR">
             <objects>
                 <tableViewController id="4QJ-UB-cY1" customClass="APHIntroPurposeContainedTableTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" sectionIndexMinimumDisplayRowCount="1" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="M62-9F-oe5">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="96" sectionHeaderHeight="22" sectionFooterHeight="22" id="M62-9F-oe5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="608"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <sections>
-                            <tableViewSection id="Lp4-RZ-vEc">
-                                <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" rowHeight="150" id="PI5-JQ-gVY">
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PI5-JQ-gVY" id="QA6-ee-Occ">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Purpose" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EXg-Rl-XU6">
-                                                    <rect key="frame" x="181" y="16" width="64.5" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Blah" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="378" translatesAutoresizingMaskIntoConstraints="NO" id="Lb5-5a-UKZ">
-                                                    <rect key="frame" x="18" y="45" width="378" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Lb5-5a-UKZ" firstAttribute="top" secondItem="EXg-Rl-XU6" secondAttribute="bottom" constant="8" id="QEW-3N-NM6"/>
-                                                <constraint firstAttribute="centerY" secondItem="EXg-Rl-XU6" secondAttribute="centerY" constant="271.75" id="Qrt-U8-fb5"/>
-                                                <constraint firstItem="EXg-Rl-XU6" firstAttribute="top" secondItem="QA6-ee-Occ" secondAttribute="topMargin" constant="8" id="XiU-nO-zcp"/>
-                                                <constraint firstItem="Lb5-5a-UKZ" firstAttribute="leading" secondItem="QA6-ee-Occ" secondAttribute="leadingMargin" constant="10" id="oxw-ji-Hup"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Lb5-5a-UKZ" secondAttribute="bottom" constant="76" id="sCz-SS-4Tq"/>
-                                                <constraint firstAttribute="centerX" secondItem="EXg-Rl-XU6" secondAttribute="centerX" constant="-6.25" id="uIY-0I-NUe"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Lb5-5a-UKZ" secondAttribute="trailing" constant="10" id="wqA-mm-R5r"/>
-                                            </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="Qrt-U8-fb5"/>
-                                                </mask>
-                                            </variation>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" rowHeight="96" id="PI5-JQ-gVY" customClass="APHIntroCellTableViewCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PI5-JQ-gVY" id="QA6-ee-Occ">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Purpose" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EXg-Rl-XU6">
+                                            <rect key="frame" x="18" y="16" width="378" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oi4-VC-ZFD">
+                                            <rect key="frame" x="18" y="37" width="378" height="51"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="oi4-VC-ZFD" secondAttribute="trailing" constant="18" id="4kB-Nx-bJy"/>
+                                        <constraint firstItem="EXg-Rl-XU6" firstAttribute="leading" secondItem="QA6-ee-Occ" secondAttribute="leadingMargin" constant="10" id="ALq-xE-fvR"/>
+                                        <constraint firstAttribute="bottom" secondItem="oi4-VC-ZFD" secondAttribute="bottom" constant="8" id="Cnh-fU-vwV"/>
+                                        <constraint firstItem="oi4-VC-ZFD" firstAttribute="leading" secondItem="QA6-ee-Occ" secondAttribute="leading" constant="18" id="MxA-6l-0tK"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="EXg-Rl-XU6" secondAttribute="trailing" constant="10" id="Q0z-K6-84w"/>
+                                        <constraint firstAttribute="centerY" secondItem="EXg-Rl-XU6" secondAttribute="centerY" constant="271.75" id="Qrt-U8-fb5"/>
+                                        <constraint firstItem="EXg-Rl-XU6" firstAttribute="top" secondItem="QA6-ee-Occ" secondAttribute="topMargin" constant="8" id="hey-cu-8T7"/>
+                                        <constraint firstItem="oi4-VC-ZFD" firstAttribute="top" secondItem="EXg-Rl-XU6" secondAttribute="bottom" constant="0.5" id="v6n-kN-fb9"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Qrt-U8-fb5"/>
+                                        </mask>
+                                    </variation>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="purposeBodyLabel" destination="oi4-VC-ZFD" id="ccm-Pq-q3S"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LengthCellIdentifier" rowHeight="96" id="0vv-ae-EE9" customClass="APHIntroCellTableViewCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0vv-ae-EE9" id="Fvy-UN-bQb">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Length" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mws-27-veR">
+                                            <rect key="frame" x="18" y="16" width="378" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6On-oB-UvS">
+                                            <rect key="frame" x="18" y="37" width="378" height="51"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="6On-oB-UvS" secondAttribute="bottom" constant="8" id="0h9-ov-vrF"/>
+                                        <constraint firstItem="Mws-27-veR" firstAttribute="leading" secondItem="Fvy-UN-bQb" secondAttribute="leadingMargin" constant="10" id="1mq-JF-knk"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Mws-27-veR" secondAttribute="trailing" constant="10" id="D2N-hh-dXW"/>
+                                        <constraint firstItem="Mws-27-veR" firstAttribute="top" secondItem="Fvy-UN-bQb" secondAttribute="topMargin" constant="8" id="EAo-gA-ncd"/>
+                                        <constraint firstItem="6On-oB-UvS" firstAttribute="leading" secondItem="Fvy-UN-bQb" secondAttribute="leading" constant="18" id="Lni-vN-Sd0"/>
+                                        <constraint firstAttribute="centerY" secondItem="Mws-27-veR" secondAttribute="centerY" constant="271.75" id="SfZ-ly-K0w"/>
+                                        <constraint firstItem="6On-oB-UvS" firstAttribute="top" secondItem="Mws-27-veR" secondAttribute="bottom" constant="0.5" id="aIR-2D-STn"/>
+                                        <constraint firstAttribute="trailing" secondItem="6On-oB-UvS" secondAttribute="trailing" constant="18" id="r2C-ts-EUg"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="SfZ-ly-K0w"/>
+                                        </mask>
+                                    </variation>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="lengthBodyLabel" destination="6On-oB-UvS" id="PzT-v4-sYm"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="4QJ-UB-cY1" id="eqx-Lh-VJJ"/>
                             <outlet property="delegate" destination="4QJ-UB-cY1" id="ANM-FL-yye"/>
                         </connections>
                     </tableView>
-                    <connections>
-                        <outlet property="purposeBodyLabel" destination="Lb5-5a-UKZ" id="dA0-Tx-4s2"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fny-f5-hEj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1457" y="189.5"/>
+            <point key="canvasLocation" x="1457" y="189"/>
         </scene>
     </scenes>
 </document>
